--- a/Access/Access/Views/TokenAndKeyConfigureView.xib
+++ b/Access/Access/Views/TokenAndKeyConfigureView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12118"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,7 +21,7 @@
             <rect key="frame" x="0.0" y="0.0" width="500" height="300"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sLP-ki-YWF">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sLP-ki-YWF">
                     <rect key="frame" x="18" y="263" width="145" height="17"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="17" id="ucP-Dv-PC6"/>
@@ -32,7 +32,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UR7-3V-KrX">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="UR7-3V-KrX">
                     <rect key="frame" x="18" y="226" width="146" height="17"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="142" id="6ME-Yf-H5k"/>
@@ -58,7 +58,7 @@
                         <outlet property="delegate" destination="-2" id="var-Qq-FVu"/>
                     </connections>
                 </textField>
-                <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lWf-hQ-wJx">
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lWf-hQ-wJx">
                     <rect key="frame" x="181" y="224" width="299" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="AppID" bezelStyle="round" id="ZeZ-4n-Cx4">
                         <font key="font" metaFont="system"/>
@@ -69,7 +69,7 @@
                         <outlet property="delegate" destination="-2" id="0aE-jO-L7h"/>
                     </connections>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s5Q-8e-Syb">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="s5Q-8e-Syb">
                     <rect key="frame" x="18" y="189" width="86" height="17"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="17" id="WHd-mq-g1J"/>
@@ -81,7 +81,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vdu-s7-Wa2">
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Vdu-s7-Wa2">
                     <rect key="frame" x="181" y="187" width="239" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Identifier" bezelStyle="round" id="SZq-eO-AYT">
                         <font key="font" metaFont="system"/>
@@ -116,14 +116,30 @@
                         <action selector="makeMain:" target="-2" id="SJ7-t4-IWE"/>
                     </connections>
                 </button>
+                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dkU-tE-4Ss">
+                    <rect key="frame" x="18" y="17" width="76" height="26"/>
+                    <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="1cN-s7-kAQ" id="Ind-dk-UOH">
+                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="menu"/>
+                        <menu key="menu" id="Hn7-78-ZFV">
+                            <items>
+                                <menuItem title="Item 1" state="on" id="1cN-s7-kAQ"/>
+                                <menuItem title="Item 2" id="rVL-rH-fjz"/>
+                                <menuItem title="Item 3" id="h78-1D-aXM"/>
+                            </items>
+                        </menu>
+                    </popUpButtonCell>
+                </popUpButton>
             </subviews>
             <constraints>
                 <constraint firstItem="Yn7-q2-eoz" firstAttribute="centerY" secondItem="sLP-ki-YWF" secondAttribute="centerY" id="0g4-RX-z9m"/>
                 <constraint firstItem="s5Q-8e-Syb" firstAttribute="top" secondItem="UR7-3V-KrX" secondAttribute="bottom" constant="20" id="1zj-et-Kg7"/>
                 <constraint firstItem="s5Q-8e-Syb" firstAttribute="leading" secondItem="sLP-ki-YWF" secondAttribute="leading" id="67p-fU-SA6"/>
+                <constraint firstItem="YEu-mB-Tdj" firstAttribute="bottom" secondItem="dkU-tE-4Ss" secondAttribute="bottom" id="8XB-aE-0xh"/>
                 <constraint firstItem="sLP-ki-YWF" firstAttribute="top" secondItem="JeO-nu-CEy" secondAttribute="top" constant="20" id="BE0-tk-oaX"/>
                 <constraint firstItem="0SS-kA-eYX" firstAttribute="leading" secondItem="Vdu-s7-Wa2" secondAttribute="trailing" constant="10" id="E01-T6-pwr"/>
                 <constraint firstItem="0SS-kA-eYX" firstAttribute="centerY" secondItem="s5Q-8e-Syb" secondAttribute="centerY" id="FcY-j0-dsV"/>
+                <constraint firstItem="dkU-tE-4Ss" firstAttribute="leading" secondItem="sLP-ki-YWF" secondAttribute="leading" id="HB3-L7-dLI"/>
                 <constraint firstItem="UR7-3V-KrX" firstAttribute="leading" secondItem="sLP-ki-YWF" secondAttribute="leading" id="JnZ-EE-UiG"/>
                 <constraint firstItem="Vdu-s7-Wa2" firstAttribute="leading" secondItem="Yn7-q2-eoz" secondAttribute="leading" id="PsJ-va-bTg"/>
                 <constraint firstItem="YEu-mB-Tdj" firstAttribute="trailing" secondItem="Yn7-q2-eoz" secondAttribute="trailing" id="UEu-t1-zQQ"/>
